<?xml version="1.0"?>
<package>
  <name>navigation</name>
  <version>0.0.0</version>
  <description>The navigation package</description>
  <author>Pan Weihong</author>
  <maintainer email="panweihong2017@outlook.com">pwh</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

</package>
